[project]
name = "tgbsms"
version = "1.0.0"
authors = [
  { name="hntirgeam", email="kmacroviperaz@gmail.com" },
]
description = "Telegram Bot Short Message Service: Small requests wrapper to send message to chat via Telegram Bot API"
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.32.3",
  "environs>=11.0.0"
]

[project.urls]
Homepage = "https://github.com/hntirgeam/tgbsms"
Issues = "https://github.com/hntirgeam/tgbsms/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
