[project]
name = "tgbsms"
version = "1.2.0"
authors = [
  { name="hntirgeam", email="kmacroviperaz@gmail.com" },
]
description = "Telegram Bot Short Message Service: Small requests wrapper to send message to chat via Telegram Bot API"
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.32.3",
  "environs>=11.0.0"
]

[project.urls]
Homepage = "https://github.com/hntirgeam/tgbsms"
Issues = "https://github.com/hntirgeam/tgbsms/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ----- Ruff

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "Q",
    "G",
    "ANN",
    "RUF",                  
    "SIM",
    "SLF",
    "RET",
    "RSE",
    "PT",
    "T20",
    "ICN",
    "DJ",
    "COM",
    "B",
    "S",
    "UP",
    "N",
    "I",
    "C90",
]
ignore = ["T201", "G004", "RUF001", "S113", "SIM115", "S311", "ANN002", "ANN003", "ANN101"]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = true